# micropaymentcrawler

./: .env.example  .gitignore  .replit  ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_SIMPLIFICATION_SUMMARY.md  CHAT_UX_IMPROVEMENTS.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  CONTENT_IDENTIFICATION_ARCHITECTURE.md  CONTENT_IDENTIFICATION_FAQ.md  CONTENT_IDENTIFICATION_QUICK_REF.md  CONTENT_ID_REUSE_SOLUTION.md  CONTENT_ID_REUSE_VISUAL_GUIDE.md  CONTEXT_FIX_SUMMARY.md  CONVERSATION_PRESERVATION_FIX.md  DEPLOYMENT_READINESS.md  E2E_TEST_REPORT.md  FULL_ACCESS_BUTTON_DOCUMENTATION.md  FULL_ARTICLE_ACCESS_IMPLEMENTATION_PLAN.md  HOW_TO_TEST_TOLLBIT_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_IMPROVEMENTS.md  LICENSING_FIX_SUMMARY.md  LICENSING_PROTOCOL_CAPABILITIES_RESEARCH.md  LICENSING_PROTOCOL_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PRICING_FIX_QUICK_REFERENCE.md  PRICING_FIX_SUMMARY.md  PROJECT_RESTORATION_FIX.md  PROTOCOL_CAPABILITIES_SUMMARY.md  PURCHASE_FLOW_DIAGRAM.md  PURCHASE_FLOW_FIX.md  PURCHASE_FLOW_IMPLEMENTATION.md  QUICK_START.md  README.md  RESEARCH_FINDINGS_README.md  RSL_FEASIBILITY_REVIEW.md  (+27 more)
attached_assets/: App_1758727163966.tsx  App_1758797604588.tsx  ChatInterface_1758797604586.tsx  Header_1758797604587.tsx  MessageBubble_1758797604587.tsx  NarrativeReport_1758727163965.tsx  OutlineReport_1758727163966.tsx  Pasted--Abstract-This-comprehensive-analysis-of-time-com-articles-on-gaza-synthesizes-findings-from-15--1759332897232_1759332897233.txt  (+103 more)
(+128 files in other folders)
